[metadata]
description-file = README.txt

[nosetests]
with-doctest=1
doctest-extension=test
with-progressive=TRUE
where=test
ignore-files=.*\.out\.py
ignore-files=setup.py

[flake8]
# ignore = E126,E127,E128,E123,E226,E241,E242,E265,W503,E402
# max-line-length=85
exclude = docs

[wheel]
universal = False

[bumpversion]
current_version = 0.5.1

